--- a/index.html
+++ b/index.html
@@ -72,6 +72,34 @@
 
     <!-- /header -->
 
+    <!-- Main -->
+
+    <!-- Vamos a insertar aquí un carrusel de imágenes -->
+    <!-- Y vamos a llamar a nuestras imágenes hawaii del carrusel -->
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="assets/images/hawaii.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/images/hawaii2.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/images/hawaii3.jpeg" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+    <!-- /Main -->
+
     <!-- footer -->
     <footer id="footer" class="pb-4 pt-4">
       <div class="container">
