--- a/index.html
+++ b/index.html
@@ -74,29 +74,27 @@
 
     <!-- Main -->
 
-    <!-- Vamos a insertar aquí un carrusel de imágenes -->
-    <!-- Y vamos a llamar a nuestras imágenes hawaii del carrusel -->
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="assets/images/hawaii.jpg" alt="First slide">
+    <!-- metemos todo en un contenedor , main , y le damos un id para posteriormente
+      poder asignarle estilos -->
+    <Main id="main">
+        <!-- data-pause="false" lo hacemos para que cuando el ratón esté encima No se pare el carrusel -->
+      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="assets/images/hawaii.jpg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/images/hawaii2.jpg" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/images/hawaii3.jpeg" alt="Third slide">
+      </div>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/hawaii2.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/hawaii3.jpeg" alt="Third slide">
-    </div>
+    <!-- Quitamos los controles de este carrusel -->
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+
+</Main>
+
 
     <!-- /Main -->
 
