--- a/index.html
+++ b/index.html
@@ -13,36 +13,25 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <!-- Buena práctica de Sacha. Encerrar las secciones con comentarios -->
+
     <!-- header -->
 
-    <!-- Vamos a construir este header. Hemos ido a boostrap y hemos cogido unos de los
-    navbar que nos ha gustado. Lo copiamos y pegamos aquí. -->
-    <!-- A este nav le añadimos un id para darle estilos -->
-    <!-- también le cambiamos el color para que contraste con el logo -->
-    <!-- nota: bg es background -->
     <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <!-- Metemos todo el contenido del nav en un container -->
+
       <div class="container">
 
         <a class="navbar-brand" href="#">
-          <!-- A por el logo -->
           <img src="assets/images/platzi-logo.png" alt="Platzi logo">
-          <!-- Y un pequeño texto al lado del logo -->
           Conf Hawaii
-
         </a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <!-- , mr , es margin rigth. En este caso estaba calculando que el margen
-          a la derecha fuera automático. Por esta razón el submenú se vehía todo en la
-          parte izquierda. Lo vamos a cambiar para que sea al contrario (margin left ml)-->
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <!-- Y cambiamos textos por aquí -->
               <a class="nav-link" href="#">La Conferencia</a>
             </li>
             <li class="nav-item">
@@ -55,46 +44,57 @@
               <a class="nav-link" href="#">Conviértete en orador</a>
             </li>
             <li class="nav-item">
-              <!-- Este elemento lo queremos resaltar para atraer la compra.
-              Para ello le vamos a crear una clase(text-platzi) y a darle estilos. -->
               <a class="nav-link text-platzi" href="#">Compra de tickets</a>
             </li>
-            <!-- No queremos dropdown. Nos lo comemos. No lo queremos -->
-            <!-- Tampoco queremos ningún elemento deshabilitado -->
           </ul>
-          <!-- El form nos lo cargamos. No lo queremos. -->
         </div>
-
       </div>
 
     </nav>
-
 
     <!-- /header -->
 
     <!-- Main -->
 
-    <!-- metemos todo en un contenedor , main , y le damos un id para posteriormente
-      poder asignarle estilos -->
     <Main id="main">
-        <!-- data-pause="false" lo hacemos para que cuando el ratón esté encima No se pare el carrusel -->
-      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="assets/images/hawaii.jpg" alt="First slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="assets/images/hawaii2.jpg" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="assets/images/hawaii3.jpeg" alt="Third slide">
-      </div>
-    </div>
-    <!-- Quitamos los controles de este carrusel -->
-  </div>
 
-</Main>
+      <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
+        <div class="carousel-inner">
 
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="assets/images/hawaii.jpg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="assets/images/hawaii2.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="assets/images/hawaii3.jpeg" alt="Third slide">
+          </div>
+
+          <!-- Añadimos otro div para hacer un overlay. Queremos añadir texto encima del carrusel. -->
+          <div class="overlay">
+            <div class="container">
+              <div class="row">
+                <div class="col">
+                  <h1>Platzi Conf Hawaii</h1>
+                  <p>Platzi Conf llega por pimera vez a Hawaii! Un evento para
+                    compartir con nuestra comunidad el conocimiento y experiencia
+                    de los expertos que están creando el futuro de internet.
+                    Ven a conocer a miembros del Team Platzi, a otros
+                    estudiantes de Platzi y a los oradores de primer nivel
+                    que tenemos para ti. Te esperamos!</p>
+
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </Main>
 
     <!-- /Main -->
 
@@ -111,7 +111,6 @@
           <div class="col-12 col-lg">
             <a href="#">Prensa</a>
           </div>
-          <!-- añadimos más columnas -->
           <div class="col-12 col-lg">
             <a href="#">Términos y condiciones</a>
           </div>
@@ -122,7 +121,7 @@
             <a href="#">Estudiantes</a>
           </div>
         </div>
-      </div
+      </div>
     </footer>
     <!-- /footer -->
 
