--- a/index.html
+++ b/index.html
@@ -90,10 +90,12 @@
                     Ven a conocer a miembros del Team Platzi, a otros
                     estudiantes de Platzi y a los oradores de primer nivel
                     que tenemos para ti. Te esperamos!</p>
-                    <!-- Añadimos ahora dos elementos clickables -->
-                    <a href="#">Quiero ser orador</a>
-                    <button type="button" name="button">Comprar tickets</button>
-                    <!-- Nota: el botón ni se parece a como se ve en el curso -->
+                    <!-- importante! Podemos observar que no hace falta que sea un
+                    botón el elemento al que agregamos las clases de botón boostrap
+                    que puede ser un <a> tranquilamente y se convierte en un botón igualmente-->
+                    <!-- También vamos a personalizar el segundo botón. -->
+                    <a href="#" class="btn btn-outline-light">Quiero ser orador</a>
+                    <button type="button" class="btn btn-platzi" name="button">Comprar tickets</button>
 
                 </div>
 
