Añadida primera card. Seguimos con este tema.

--- a/index.html
+++ b/index.html
@@ -111,6 +111,41 @@
 
     <!-- /Main -->
 
+    <!-- speakers -->
+
+    <!-- , mt , es margin top -->
+    <section id="speakers" class="mt-4">
+      <div class="container">
+
+        <div class="row">
+          <div class="col text-center text-uppercase">
+            <small>Conoce a los</small>
+            <h2>Oradores</h2>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col">
+            <!-- Aquí le vamos a pegar la tarjeta que queremos -->
+            <!-- Le quitamos el width original porque lo queremos arreglar nosotros -->
+            <div class="card">
+              <img src="assets/speakers/sacha.jpg" class="card-img-top" alt="foto de Sacha">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+
+    <!-- /speakers -->
+
     <!-- footer -->
     <footer id="footer" class="pb-4 pt-4">
       <div class="container">
