Tarjeta terminada. Ahora la clonaremos en el siguiente commit.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <!-- speakers -->
 
     <!-- , mt , es margin top -->
-    <section id="speakers" class="mt-4">
+    <section id="speakers" class="mt-4 mb-4">
       <div class="container">
 
         <div class="row">
@@ -125,15 +125,16 @@
         </div>
 
         <div class="row">
-          <div class="col">
+          <!-- vamos a decirle a boostrap cómo queremos distribuir las columnas :-) -->
+          <div class="col-md-4">
             <!-- Aquí le vamos a pegar la tarjeta que queremos -->
             <!-- Le quitamos el width original porque lo queremos arreglar nosotros -->
             <div class="card">
               <img src="assets/speakers/sacha.jpg" class="card-img-top" alt="foto de Sacha">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Sacha Lifszyc</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <!-- Quitamos el botón. No nos hace falta. -->
               </div>
             </div>
 
