--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <!-- speakers -->
 
     <!-- , mt , es margin top -->
-    <section id="speakers" class="mt-4 mb-4">
+    <section id="speakers" class="mt-4">
       <div class="container">
 
         <div class="row">
@@ -125,19 +125,46 @@
         </div>
 
         <div class="row">
-          <!-- vamos a decirle a boostrap cómo queremos distribuir las columnas :-) -->
-          <div class="col-md-4">
-            <!-- Aquí le vamos a pegar la tarjeta que queremos -->
-            <!-- Le quitamos el width original porque lo queremos arreglar nosotros -->
+
+          <div class="col-md-4 mb-4">
             <div class="card">
               <img src="assets/speakers/sacha.jpg" class="card-img-top" alt="foto de Sacha">
               <div class="card-body">
                 <h5 class="card-title">Sacha Lifszyc</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <!-- Quitamos el botón. No nos hace falta. -->
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
             </div>
-
+          </div>
+          <div class="col-md-4 mb-4">
+            <div class="card">
+              <img src="assets/speakers/leonidas2.jpeg" class="card-img-top" alt="foto de Sacha">
+              <div class="card-body">
+                <h5 class="card-title">Leonidas Esteban</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-4">
+            <div class="card">
+              <img src="assets/speakers/freddy.jpeg" class="card-img-top" alt="foto de Sacha">
+              <div class="card-body">
+                <h5 class="card-title">Freddy Vega</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-4">
+            <div class="card">
+              <img src="assets/speakers/cvander.jpeg" class="card-img-top" alt="foto de Sacha">
+              <div class="card-body">
+                <h5 class="card-title">Christian Vander H.</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+            </div>
           </div>
 
         </div>
