Añadiendo pildorillas o badges.

--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@
               <img src="assets/speakers/sacha.jpg" class="card-img-top" alt="foto de Sacha">
               <div class="card-body">
                 <h5 class="card-title">Sacha Lifszyc</h5>
+                <!-- Vamos a incluir pildorillas o badges -->
+                <div class="badges">
+                  <span class="badge badge-warning">Warning</span>
+
+                </div>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
                   do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
