Badges. Damos el tema por terminado.

--- a/index.html
+++ b/index.html
@@ -130,10 +130,14 @@
             <div class="card">
               <img src="assets/speakers/sacha.jpg" class="card-img-top" alt="foto de Sacha">
               <div class="card-body">
-                <h5 class="card-title">Sacha Lifszyc</h5>
-                <!-- Vamos a incluir pildorillas o badges -->
-                <div class="badges">
-                  <span class="badge badge-warning">Warning</span>
+                <h5 class="card-title mb-0">Sacha Lifszyc</h5>
+                <!-- Arreglamos un poquito los márgenes entre el título y los badges -->
+                <div class="badges mb-2">
+                  <span class="badge badge-warning">Javascript</span>
+                  <span class="badge badge-info">React</span>
+                  <!-- En el curso los badges terminan encima del título. En este tuto se
+                  van a quedar aquí debajito para que sea más instructivo por el tema de
+                  los márgenes. -->
 
                 </div>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
@@ -145,7 +149,7 @@
             <div class="card">
               <img src="assets/speakers/leonidas2.jpeg" class="card-img-top" alt="foto de Sacha">
               <div class="card-body">
-                <h5 class="card-title">Leonidas Esteban</h5>
+                <h5 class="card-title mb-0">Leonidas Esteban</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
                   do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
@@ -155,7 +159,7 @@
             <div class="card">
               <img src="assets/speakers/freddy.jpeg" class="card-img-top" alt="foto de Sacha">
               <div class="card-body">
-                <h5 class="card-title">Freddy Vega</h5>
+                <h5 class="card-title mb-0">Freddy Vega</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
                   do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
@@ -165,7 +169,7 @@
             <div class="card">
               <img src="assets/speakers/cvander.jpeg" class="card-img-top" alt="foto de Sacha">
               <div class="card-body">
-                <h5 class="card-title">Christian Vander H.</h5>
+                <h5 class="card-title mb-0">Christian Vander H.</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
                   do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
@@ -178,6 +182,7 @@
     </section>
 
     <!-- /speakers -->
+
 
     <!-- footer -->
     <footer id="footer" class="pb-4 pt-4">
