--- a/index.html
+++ b/index.html
@@ -183,6 +183,23 @@
 
     <!-- /speakers -->
 
+    <!-- Lugar y fecha -->
+    <section id="place-time">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col">
+            col1
+          </div>
+          <div class="col">
+            col1
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+
+    <!-- /Lugar y fecha -->
 
     <!-- footer -->
     <footer id="footer" class="pb-4 pt-4">
