--- a/index.html
+++ b/index.html
@@ -187,11 +187,18 @@
     <section id="place-time">
       <div class="container-fluid">
         <div class="row">
-          <div class="col">
-            col1
+          <!-- No queremos padding lateral en esta columna. , pl , es padding-left -->
+          <div class="col-12 col-lg-6 pl-0 pr-0">
+            <img src="assets/images/honolulu.jpg" alt="isla de Honolulu">
           </div>
-          <div class="col">
-            col1
+          <div class="col-12 col-lg-6 pt-4 pb-4">
+            <h2>Honolulu - Octubre 2025</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+              ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+              laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
+              in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <a href="#" class="btn btn-outline-light">Conoce más</a>
           </div>
 
         </div>
