--- a/index.html
+++ b/index.html
@@ -200,13 +200,50 @@
               in culpa qui officia deserunt mollit anim id est laborum.</p>
               <a href="#" class="btn btn-outline-light">Conoce más</a>
           </div>
+        </div>
+      </div>
+    </section>
+    <!-- /Lugar y fecha -->
+
+    <!-- Conviértete en orador -->
+    <section id="conviertete-en-orador" class="pt-2 pb-2">
+      <div class="container">
+
+        <div class="row">
+          <div class="col text-uppercase text-center">
+            <small>Conviértete en un</small>
+            <h2>Orador</h2>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col text-center">
+            Anótate como orador para dar una charla ignite.
+            Cuéntanos de qué quieres hablar!.
+          </div>
+        </div>
+
+        <!-- agregamos aquí nuestro formulario -->
+        <div class="row">
+          <div class="col col-md-10 offset-md-1 col-lg-8 offset-lg-2 pt-2">
+            <form>
+              <div class="form-row">
+                <div class="col-12 col-md-6">
+                  <input type="text" class="form-control" placeholder="Nombre">
+                </div>
+                <div class="col-12 col-md-6">
+                  <input type="text" class="form-control" placeholder="Apellido">
+                </div>
+              </div>
+            </form>
+
+          </div>
 
         </div>
 
       </div>
     </section>
-
-    <!-- /Lugar y fecha -->
+    <!-- /Conviértete en orador -->
 
     <!-- footer -->
     <footer id="footer" class="pb-4 pt-4">
