--- a/index.html
+++ b/index.html
@@ -228,10 +228,12 @@
           <div class="col col-md-10 offset-md-1 col-lg-8 offset-lg-2 pt-2">
             <form>
               <div class="form-row">
-                <div class="col-12 col-md-6">
+                <!-- añadimos , form-group , para que Bootstrap entienda que son un grupo. Esto
+                va a añadir automáticamente un espaciado entre ellos al considerarlos grupo. -->
+                <div class="form-group col-12 col-md-6">
                   <input type="text" class="form-control" placeholder="Nombre">
                 </div>
-                <div class="col-12 col-md-6">
+                <div class="form-group col-12 col-md-6">
                   <input type="text" class="form-control" placeholder="Apellido">
                 </div>
               </div>
